samples/_failures_safe/1761615534_aaf306_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ca04eaf.c: In function ‘main’:
./samples/SAFE/__tmp_1ca04eaf.c:118:5: error: expected declaration or statement at end of input
  118 |     MATRIX_PRINT(matrix2, rows2, cols2);
      |     ^~~~~~~~~~~~
